--- a/host/package.json
+++ b/host/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
